# manim-hw

./: .gitignore  README.md  anime_combine_demo.py  apply_method_demo.py  cn_provinces_gdp_chart.py  function_plotting.py  gdp_race_chart.py  geometry_3d_plane_demo.py  hw.py  img_mobj_demo.py  json_scene_operation_demo.py  manim_sideview_hw.py  manim_slides_hw.py  opening_animation.py  pku_2021_sf_abc_problem.py  pyproject.toml  shape_transform_demo.py  shenzhen_26_gaosan_moni_19_ex.py  shoot_practice.py  tex_demo.py
251230_bool_gauss/: 2x2开关阵列状态转移图.html  graph_view.py  solve_mod2_eqs.py
docs/: B站视频：henan_2610_t14.md  B站视频：n2_n2_mod_12_eq_0.md  B站视频：pku_2021_sf_abc_problem.md  B站视频：rank_list_demo.md  B站视频：shoot_practice.md  B站视频：water_level_curve.md  B站视频：三角形中sinA+2sinB=2sinC，求1比sinA+1比sinB-1比sinC最小值.md  TODO.md  manim从夯到拉递归.md  manim够赞旋转1分钟.md  manim开场动画制作.md  manim的schema化.md  manim练习：打靶视频.md  manim编写规范.md  初体验：用manim展示21年北大强基三元对称式题推导过程.md  开发运动的水印.md  用magick快速制作其他尺寸的封面.md  视频文字稿：henan_2610_t14.md  视频文字稿：n2_n2_mod_12_eq_0.md  视频文字稿：pku_2021_sf_abc_problem.md  视频文字稿：rank_list_demo.md  视频文字稿：rank_list_how_to.md  视频文字稿：shoot_how_to.md  视频文字稿：shoot_practice.md  视频文字稿：tri_2sinc_merged.md  视频文字稿：tri_sina_add_2sinb_eq_2sinc-主视频.md  视频文字稿：tri_sina_add_2sinb_eq_2sinc-正弦定理+余弦定理.md  视频文字稿：tri_sina_add_2sinb_eq_2sinc-纯三角变换.md
henan_2610_t14/: henan_2610_t14.py  subtitle_config.json
m_objects/: moving_watermark.py
manim_schema/: json_driven_scene.py  manim_json_schema.d.ts
n2_n2_mod_12_eq_0/: fix_subtitle.py  n2_n2_mod_12_eq_0.py  subtitle_config.json
(+64 files in other folders)
