[project]
name = "manim-hw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "edge-tts>=7.2.3",
    "manim>=0.19.0",
    "manim-slides>=5.5.2",
    "rich>=14.1.0",
    "sympy>=1.14.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
